gitops/workloads/three-tier-app/base/backend-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend
  labels:
    app: backend
    tier: api
spec:
  replicas: 4
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: backend
      app.atlas.io/managed-by: argocd
      app.atlas.io/workload: three-tier-app

  strategy:
    canary:
      scaleDownDelaySeconds: 300
      stableService: backend-svc
      canaryService: backend-svc-canary
      trafficRouting:
        nginx:
          stableIngress: backend
      steps:
        - setWeight: 25
        - analysis:
            templates:
              - templateName: backend-canary-analysis
            args:
              - name: canary-version
                value: "v2"
        - setWeight: 50
        - pause: { duration: 30s }
        - setWeight: 75
        - pause: { duration: 30s }
      canaryMetadata:
        labels:
          rollout-pod-template-hash-version: canary
      stableMetadata:
        labels:
          rollout-pod-template-hash-version: stable

  template:
    metadata:
      labels:
        app: backend
        tier: api
        app.atlas.io/managed-by: argocd
        app.atlas.io/workload: three-tier-app
    spec:
      containers:
        - name: backend
          image: ghcr.io/prashant-zo/atlas-backend:v2
          ports:
            - name: http
              containerPort: 5678
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /
              port: 5678
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 5678
            initialDelaySeconds: 10
            periodSeconds: 10
