gitops/workloads/three-tier-app/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 3000
      targetPort: 5678
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc-canary
  labels:
    app: backend
spec:
  type: ClusterIP
  selector: 
    app: backend
  ports:
    - name: http
      port: 3000
      targetPort: 5678
      protocol: TCP
